--- a/css/entomof.css
+++ b/css/entomof.css
@@ -18,3 +18,31 @@
 .ento-item:hover {
     transform: scale(0.9);
 }
+
+
+
+
+
+
+
+
+
+
+/* All Media Query */
+
+@media only screen and (max-width: 768px) {
+    .main-entomof {
+        background-image: url(../img/entomofagi/media768/main-bg.png);
+        top: -48px;
+        padding: 2px 30px 6px;
+    }
+}
+
+
+
+
+@media only screen and (max-width: 480px) {
+    .main {
+        background-image: inherit;
+    }
+}
