--- a/css/output.css
+++ b/css/output.css
@@ -565,8 +565,8 @@ html {
   width: 100%;
   margin-right: auto;
   margin-left: auto;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 20px;
+  padding-left: 20px;
   max-width: 1195px;
 }
 
@@ -621,12 +621,24 @@ html {
   margin-top: 2.25rem;
 }
 
-.mt-36 {
-  margin-top: 9rem;
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
 }
 
 .mr-3 {
   margin-right: 0.75rem;
+}
+
+.mt-36 {
+  margin-top: 9rem;
 }
 
 .mr-6 {
@@ -689,28 +701,12 @@ html {
   margin-right: 5rem;
 }
 
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
 .mt-20 {
   margin-top: 5rem;
 }
 
 .mb-20 {
   margin-bottom: 5rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.mt-16 {
-  margin-top: 4rem;
-}
-
-.mb-9 {
-  margin-bottom: 2.25rem;
 }
 
 .box-border {
@@ -757,16 +753,20 @@ html {
   max-width: 100%;
 }
 
-.max-w-\[670px\] {
-  max-width: 670px;
+.max-w-\[480px\] {
+  max-width: 480px;
 }
 
 .max-w-\[460px\] {
   max-width: 460px;
 }
 
-.max-w-\[240px\] {
-  max-width: 240px;
+.max-w-\[720px\] {
+  max-width: 720px;
+}
+
+.max-w-\[670px\] {
+  max-width: 670px;
 }
 
 .max-w-\[348px\] {
@@ -781,32 +781,8 @@ html {
   max-width: 600px;
 }
 
-.max-w-\[480px\] {
-  max-width: 480px;
-}
-
-.max-w-\[700px\] {
-  max-width: 700px;
-}
-
-.max-w-\[720px\] {
-  max-width: 720px;
-}
-
-.max-w-\[730px\] {
-  max-width: 730px;
-}
-
-.max-w-\[740px\] {
-  max-width: 740px;
-}
-
-.max-w-\[750px\] {
-  max-width: 750px;
-}
-
-.basis-\[30\%\] {
-  flex-basis: 30%;
+.basis-\[33\%\] {
+  flex-basis: 33%;
 }
 
 .basis-\[32\%\] {
@@ -815,18 +791,6 @@ html {
 
 .basis-\[31\%\] {
   flex-basis: 31%;
-}
-
-.basis-\[208px\] {
-  flex-basis: 208px;
-}
-
-.basis-\[33\%\] {
-  flex-basis: 33%;
-}
-
-.basis-\[35\%\] {
-  flex-basis: 35%;
 }
 
 .cursor-pointer {
@@ -973,6 +937,11 @@ html {
   line-height: 1;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1006,11 +975,6 @@ html {
   font-size: 34px;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .font-normal {
   font-weight: 400;
 }
@@ -1023,6 +987,10 @@ html {
   line-height: 2.5rem;
 }
 
+.leading-7 {
+  line-height: 1.75rem;
+}
+
 .leading-5 {
   line-height: 1.25rem;
 }
@@ -1033,10 +1001,6 @@ html {
 
 .leading-9 {
   line-height: 2.25rem;
-}
-
-.leading-7 {
-  line-height: 1.75rem;
 }
 
 .leading-\[54px\] {
@@ -1112,6 +1076,14 @@ html {
 }
 
 @media (max-width: 768px) {
+  .md\:relative {
+    position: relative;
+  }
+
+  .md\:top-8 {
+    top: 2rem;
+  }
+
   .md\:mx-7 {
     margin-left: 1.75rem;
     margin-right: 1.75rem;
@@ -1149,6 +1121,14 @@ html {
     margin-top: 1.75rem;
   }
 
+  .md\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
+  .md\:mt-9 {
+    margin-top: 2.25rem;
+  }
+
   .md\:mt-2 {
     margin-top: 0.5rem;
   }
@@ -1177,6 +1157,14 @@ html {
     display: none;
   }
 
+  .md\:h-8 {
+    height: 2rem;
+  }
+
+  .md\:w-8 {
+    width: 2rem;
+  }
+
   .md\:w-\[90\%\] {
     width: 90%;
   }
@@ -1189,8 +1177,24 @@ html {
     max-width: 338px;
   }
 
+  .md\:max-w-\[323px\] {
+    max-width: 323px;
+  }
+
   .md\:max-w-\[330px\] {
     max-width: 330px;
+  }
+
+  .md\:max-w-\[563px\] {
+    max-width: 563px;
+  }
+
+  .md\:basis-\[42\%\] {
+    flex-basis: 42%;
+  }
+
+  .md\:basis-\[34\%\] {
+    flex-basis: 34%;
   }
 
   .md\:justify-center {
@@ -1200,6 +1204,11 @@ html {
   .md\:px-\[30px\] {
     padding-left: 30px;
     padding-right: 30px;
+  }
+
+  .md\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .md\:px-7 {
@@ -1257,30 +1266,30 @@ html {
     line-height: 2.25rem;
   }
 
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
   .md\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
 
-  .md\:leading-6 {
-    line-height: 1.5rem;
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:leading-8 {
+    line-height: 2rem;
   }
 
   .md\:leading-\[18px\] {
     line-height: 18px;
   }
 
-  .md\:leading-7 {
-    line-height: 1.75rem;
+  .md\:leading-6 {
+    line-height: 1.5rem;
   }
 
-  .md\:leading-8 {
-    line-height: 2rem;
+  .md\:leading-7 {
+    line-height: 1.75rem;
   }
 }
 
@@ -1298,8 +1307,8 @@ html {
     margin-top: 10px;
   }
 
-  .sm\:mt-28 {
-    margin-top: 7rem;
+  .sm\:mt-5 {
+    margin-top: 1.25rem;
   }
 
   .sm\:mr-0 {
@@ -1324,6 +1333,10 @@ html {
 
   .sm\:mb-12 {
     margin-bottom: 3rem;
+  }
+
+  .sm\:mt-28 {
+    margin-top: 7rem;
   }
 
   .sm\:mt-2 {
@@ -1376,6 +1389,10 @@ html {
 
   .sm\:max-w-\[318px\] {
     max-width: 318px;
+  }
+
+  .sm\:max-w-\[304px\] {
+    max-width: 304px;
   }
 
   .sm\:max-w-\[240px\] {
@@ -1447,6 +1464,11 @@ html {
     font-size: 28px;
   }
 
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
   .sm\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -1473,11 +1495,6 @@ html {
 
   .sm\:text-\[22px\] {
     font-size: 22px;
-  }
-
-  .sm\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 
   .sm\:leading-4 {
