--- a/css/output.css
+++ b/css/output.css
@@ -1181,16 +1181,12 @@ html {
     max-width: 323px;
   }
 
-  .md\:max-w-\[330px\] {
-    max-width: 330px;
-  }
-
   .md\:max-w-\[563px\] {
     max-width: 563px;
   }
 
-  .md\:basis-\[42\%\] {
-    flex-basis: 42%;
+  .md\:max-w-\[330px\] {
+    max-width: 330px;
   }
 
   .md\:basis-\[34\%\] {
@@ -1204,11 +1200,6 @@ html {
   .md\:px-\[30px\] {
     padding-left: 30px;
     padding-right: 30px;
-  }
-
-  .md\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
   }
 
   .md\:px-7 {
@@ -1293,7 +1284,7 @@ html {
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 360px) {
   .sm\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -1309,6 +1300,10 @@ html {
 
   .sm\:mt-5 {
     margin-top: 1.25rem;
+  }
+
+  .sm\:mt-1 {
+    margin-top: 0.25rem;
   }
 
   .sm\:mr-0 {
@@ -1367,6 +1362,14 @@ html {
     margin-bottom: 1rem;
   }
 
+  .sm\:mt-20 {
+    margin-top: 5rem;
+  }
+
+  .sm\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+
   .sm\:block {
     display: block;
   }
@@ -1403,12 +1406,20 @@ html {
     max-width: 270px;
   }
 
+  .sm\:basis-\[48\%\] {
+    flex-basis: 48%;
+  }
+
   .sm\:flex-col {
     flex-direction: column;
   }
 
   .sm\:justify-start {
     justify-content: flex-start;
+  }
+
+  .sm\:justify-end {
+    justify-content: flex-end;
   }
 
   .sm\:justify-center {
@@ -1443,6 +1454,16 @@ html {
     padding-right: 0px;
   }
 
+  .sm\:py-\[3px\] {
+    padding-top: 3px;
+    padding-bottom: 3px;
+  }
+
+  .sm\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
   .sm\:pt-20 {
     padding-top: 5rem;
   }
@@ -1453,6 +1474,10 @@ html {
 
   .sm\:pt-0 {
     padding-top: 0px;
+  }
+
+  .sm\:pt-16 {
+    padding-top: 4rem;
   }
 
   .sm\:text-xl {
@@ -1495,6 +1520,14 @@ html {
 
   .sm\:text-\[22px\] {
     font-size: 22px;
+  }
+
+  .sm\:text-\[15px\] {
+    font-size: 15px;
+  }
+
+  .sm\:text-\[13px\] {
+    font-size: 13px;
   }
 
   .sm\:leading-4 {
