--- a/css/output.css
+++ b/css/output.css
@@ -781,6 +781,10 @@ html {
   max-width: 600px;
 }
 
+.max-w-\[310px\] {
+  max-width: 310px;
+}
+
 .basis-\[33\%\] {
   flex-basis: 33%;
 }
@@ -1217,14 +1221,14 @@ html {
     padding-right: 5rem;
   }
 
+  .md\:px-16 {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
   .md\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
-  }
-
-  .md\:py-4 {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
   }
 
   .md\:pb-8 {
@@ -1245,6 +1249,10 @@ html {
 
   .md\:pt-0 {
     padding-top: 0px;
+  }
+
+  .md\:pt-\[72px\] {
+    padding-top: 72px;
   }
 
   .md\:text-xl {
@@ -1282,9 +1290,18 @@ html {
   .md\:leading-7 {
     line-height: 1.75rem;
   }
+
+  .md\:leading-4 {
+    line-height: 1rem;
+  }
 }
 
 @media (max-width: 360px) {
+  .sm\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   .sm\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -1330,8 +1347,20 @@ html {
     margin-bottom: 3rem;
   }
 
-  .sm\:mt-28 {
-    margin-top: 7rem;
+  .sm\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .sm\:mt-20 {
+    margin-top: 5rem;
+  }
+
+  .sm\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+
+  .sm\:mt-12 {
+    margin-top: 3rem;
   }
 
   .sm\:mt-2 {
@@ -1342,16 +1371,24 @@ html {
     margin-bottom: 0.5rem;
   }
 
+  .sm\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
+  .sm\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .sm\:ml-5 {
+    margin-left: 1.25rem;
+  }
+
   .sm\:mb-5 {
     margin-bottom: 1.25rem;
   }
 
   .sm\:mb-\[30px\] {
     margin-bottom: 30px;
-  }
-
-  .sm\:mt-0 {
-    margin-top: 0px;
   }
 
   .sm\:mt-8 {
@@ -1362,12 +1399,12 @@ html {
     margin-bottom: 1rem;
   }
 
-  .sm\:mt-20 {
-    margin-top: 5rem;
+  .sm\:mt-48 {
+    margin-top: 12rem;
   }
 
-  .sm\:mb-3 {
-    margin-bottom: 0.75rem;
+  .sm\:mr-4 {
+    margin-right: 1rem;
   }
 
   .sm\:block {
@@ -1398,8 +1435,8 @@ html {
     max-width: 304px;
   }
 
-  .sm\:max-w-\[240px\] {
-    max-width: 240px;
+  .sm\:max-w-\[218px\] {
+    max-width: 218px;
   }
 
   .sm\:max-w-\[270px\] {
@@ -1416,10 +1453,6 @@ html {
 
   .sm\:justify-start {
     justify-content: flex-start;
-  }
-
-  .sm\:justify-end {
-    justify-content: flex-end;
   }
 
   .sm\:justify-center {
@@ -1439,14 +1472,9 @@ html {
     border-color: rgb(2 229 2 / var(--tw-border-opacity));
   }
 
-  .sm\:px-11 {
-    padding-left: 2.75rem;
-    padding-right: 2.75rem;
-  }
-
-  .sm\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
+  .sm\:py-\[3px\] {
+    padding-top: 3px;
+    padding-bottom: 3px;
   }
 
   .sm\:px-0 {
@@ -1454,14 +1482,14 @@ html {
     padding-right: 0px;
   }
 
-  .sm\:py-\[3px\] {
-    padding-top: 3px;
-    padding-bottom: 3px;
-  }
-
   .sm\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .sm\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .sm\:pt-20 {
@@ -1476,8 +1504,8 @@ html {
     padding-top: 0px;
   }
 
-  .sm\:pt-16 {
-    padding-top: 4rem;
+  .sm\:pt-48 {
+    padding-top: 12rem;
   }
 
   .sm\:text-xl {
@@ -1504,9 +1532,17 @@ html {
     line-height: 2.5rem;
   }
 
+  .sm\:text-\[15px\] {
+    font-size: 15px;
+  }
+
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .sm\:text-\[13px\] {
+    font-size: 13px;
   }
 
   .sm\:text-2xl {
@@ -1514,20 +1550,12 @@ html {
     line-height: 2rem;
   }
 
+  .sm\:text-\[17px\] {
+    font-size: 17px;
+  }
+
   .sm\:text-\[26px\] {
     font-size: 26px;
-  }
-
-  .sm\:text-\[22px\] {
-    font-size: 22px;
-  }
-
-  .sm\:text-\[15px\] {
-    font-size: 15px;
-  }
-
-  .sm\:text-\[13px\] {
-    font-size: 13px;
   }
 
   .sm\:leading-4 {
@@ -1540,6 +1568,10 @@ html {
 
   .sm\:leading-6 {
     line-height: 1.5rem;
+  }
+
+  .sm\:leading-\[0\.5rem\] {
+    line-height: 0.5rem;
   }
 
   .sm\:leading-5 {
