--- a/css/output.css
+++ b/css/output.css
@@ -769,8 +769,8 @@ html {
   max-width: 670px;
 }
 
-.max-w-\[348px\] {
-  max-width: 348px;
+.max-w-\[310px\] {
+  max-width: 310px;
 }
 
 .max-w-\[373px\] {
@@ -779,10 +779,6 @@ html {
 
 .max-w-\[600px\] {
   max-width: 600px;
-}
-
-.max-w-\[310px\] {
-  max-width: 310px;
 }
 
 .basis-\[33\%\] {
@@ -1216,11 +1212,6 @@ html {
     padding-bottom: 2.5rem;
   }
 
-  .md\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-
   .md\:px-16 {
     padding-left: 4rem;
     padding-right: 4rem;
@@ -1239,6 +1230,10 @@ html {
     padding-top: 7rem;
   }
 
+  .md\:pt-\[72px\] {
+    padding-top: 72px;
+  }
+
   .md\:pt-\[640px\] {
     padding-top: 640px;
   }
@@ -1249,10 +1244,6 @@ html {
 
   .md\:pt-0 {
     padding-top: 0px;
-  }
-
-  .md\:pt-\[72px\] {
-    padding-top: 72px;
   }
 
   .md\:text-xl {
@@ -1297,6 +1288,10 @@ html {
 }
 
 @media (max-width: 360px) {
+  .sm\:right-\[0\.05rem\] {
+    right: 0.05rem;
+  }
+
   .sm\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
@@ -1305,6 +1300,11 @@ html {
   .sm\:mx-auto {
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .sm\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
 
   .sm\:ml-3 {
@@ -1351,6 +1351,18 @@ html {
     margin-top: 0px;
   }
 
+  .sm\:mb-2 {
+    margin-bottom: 0.5rem;
+  }
+
+  .sm\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
+  .sm\:mr-6 {
+    margin-right: 1.5rem;
+  }
+
   .sm\:mt-20 {
     margin-top: 5rem;
   }
@@ -1363,12 +1375,12 @@ html {
     margin-top: 3rem;
   }
 
-  .sm\:mt-2 {
-    margin-top: 0.5rem;
+  .sm\:ml-5 {
+    margin-left: 1.25rem;
   }
 
-  .sm\:mb-2 {
-    margin-bottom: 0.5rem;
+  .sm\:mt-2 {
+    margin-top: 0.5rem;
   }
 
   .sm\:mb-8 {
@@ -1379,16 +1391,12 @@ html {
     margin-bottom: 0px;
   }
 
-  .sm\:ml-5 {
-    margin-left: 1.25rem;
-  }
-
-  .sm\:mb-5 {
-    margin-bottom: 1.25rem;
-  }
-
   .sm\:mb-\[30px\] {
     margin-bottom: 30px;
+  }
+
+  .sm\:mr-4 {
+    margin-right: 1rem;
   }
 
   .sm\:mt-8 {
@@ -1399,12 +1407,8 @@ html {
     margin-bottom: 1rem;
   }
 
-  .sm\:mt-48 {
-    margin-top: 12rem;
-  }
-
-  .sm\:mr-4 {
-    margin-right: 1rem;
+  .sm\:mb-\[1\.05rem\] {
+    margin-bottom: 1.05rem;
   }
 
   .sm\:block {
@@ -1425,6 +1429,10 @@ html {
 
   .sm\:w-28 {
     width: 7rem;
+  }
+
+  .sm\:w-\[170px\] {
+    width: 170px;
   }
 
   .sm\:max-w-\[318px\] {
@@ -1496,6 +1504,22 @@ html {
     padding-top: 5rem;
   }
 
+  .sm\:pt-2 {
+    padding-top: 0.5rem;
+  }
+
+  .sm\:pb-3 {
+    padding-bottom: 0.75rem;
+  }
+
+  .sm\:pr-1 {
+    padding-right: 0.25rem;
+  }
+
+  .sm\:pt-48 {
+    padding-top: 12rem;
+  }
+
   .sm\:pt-\[360px\] {
     padding-top: 360px;
   }
@@ -1504,8 +1528,8 @@ html {
     padding-top: 0px;
   }
 
-  .sm\:pt-48 {
-    padding-top: 12rem;
+  .sm\:pt-60 {
+    padding-top: 15rem;
   }
 
   .sm\:text-xl {
