--- a/css/entomof.css
+++ b/css/entomof.css
@@ -21,9 +21,33 @@
 
 
 
+/* About section */
 
+.entomof-text {
+    height: 150px;
+    overflow: hidden;
+    position: relative;
+    transition: all 1s ease;
+}
 
+.entomof-text::before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 110px;
+    background: linear-gradient(0deg, #181818 0%, rgba(24, 24, 24, 0.63) 100%);
+}
 
+.info.open-active .entomof-text {
+    height: 260px;
+}
+
+.info.open-active .entomof-text::before {
+    display: none;
+}
 
 
 
@@ -36,13 +60,31 @@
         top: -48px;
         padding: 2px 30px 6px;
     }
+
+    .entomof-text {
+        padding: 0 30px;
+
+    }
 }
 
 
 
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 360px) {
     .main-entomof {
         background-image: inherit;
+        padding: 2px 0 6px;
+    }
+
+    .entomof-text {
+        padding: 2px 0 6px;
+        height: 208px;
+        overflow: hidden;
+        position: relative;
+        transition: all 1s ease;
+    }
+
+    .info.open-active .entomof-text {
+        height: 766px;
     }
 }
