--- a/css/output.css
+++ b/css/output.css
@@ -709,6 +709,10 @@ html {
   margin-bottom: 5rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -1011,6 +1015,10 @@ html {
   line-height: 22px;
 }
 
+.leading-6 {
+  line-height: 1.5rem;
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1151,6 +1159,10 @@ html {
 
   .md\:mt-12 {
     margin-top: 3rem;
+  }
+
+  .md\:ml-\[30px\] {
+    margin-left: 30px;
   }
 
   .md\:hidden {
@@ -1311,8 +1323,24 @@ html {
     margin-left: 0.75rem;
   }
 
-  .sm\:mt-\[10px\] {
-    margin-top: 10px;
+  .sm\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .sm\:mb-2 {
+    margin-bottom: 0.5rem;
+  }
+
+  .sm\:mb-5 {
+    margin-bottom: 1.25rem;
+  }
+
+  .sm\:mt-4 {
+    margin-top: 1rem;
+  }
+
+  .sm\:mr-6 {
+    margin-right: 1.5rem;
   }
 
   .sm\:mt-5 {
@@ -1325,10 +1353,6 @@ html {
 
   .sm\:mr-0 {
     margin-right: 0px;
-  }
-
-  .sm\:mt-4 {
-    margin-top: 1rem;
   }
 
   .sm\:mb-6 {
@@ -1345,22 +1369,6 @@ html {
 
   .sm\:mb-12 {
     margin-bottom: 3rem;
-  }
-
-  .sm\:mt-0 {
-    margin-top: 0px;
-  }
-
-  .sm\:mb-2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .sm\:mb-5 {
-    margin-bottom: 1.25rem;
-  }
-
-  .sm\:mr-6 {
-    margin-right: 1.5rem;
   }
 
   .sm\:mt-20 {
@@ -1411,6 +1419,10 @@ html {
     margin-bottom: 1.05rem;
   }
 
+  .sm\:ml-0 {
+    margin-left: 0px;
+  }
+
   .sm\:block {
     display: block;
   }
@@ -1427,12 +1439,12 @@ html {
     height: 106px;
   }
 
-  .sm\:w-28 {
-    width: 7rem;
-  }
-
   .sm\:w-\[170px\] {
     width: 170px;
+  }
+
+  .sm\:w-28 {
+    width: 7rem;
   }
 
   .sm\:max-w-\[318px\] {
@@ -1457,10 +1469,6 @@ html {
 
   .sm\:flex-col {
     flex-direction: column;
-  }
-
-  .sm\:justify-start {
-    justify-content: flex-start;
   }
 
   .sm\:justify-center {
@@ -1500,10 +1508,6 @@ html {
     padding-right: 2rem;
   }
 
-  .sm\:pt-20 {
-    padding-top: 5rem;
-  }
-
   .sm\:pt-2 {
     padding-top: 0.5rem;
   }
@@ -1516,8 +1520,12 @@ html {
     padding-right: 0.25rem;
   }
 
-  .sm\:pt-48 {
-    padding-top: 12rem;
+  .sm\:pt-20 {
+    padding-top: 5rem;
+  }
+
+  .sm\:pt-60 {
+    padding-top: 15rem;
   }
 
   .sm\:pt-\[360px\] {
@@ -1528,22 +1536,17 @@ html {
     padding-top: 0px;
   }
 
-  .sm\:pt-60 {
-    padding-top: 15rem;
-  }
-
-  .sm\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .sm\:text-\[28px\] {
-    font-size: 28px;
+  .sm\:text-\[15px\] {
+    font-size: 15px;
   }
 
   .sm\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .sm\:text-\[28px\] {
+    font-size: 28px;
   }
 
   .sm\:text-lg {
@@ -1556,10 +1559,6 @@ html {
     line-height: 2.5rem;
   }
 
-  .sm\:text-\[15px\] {
-    font-size: 15px;
-  }
-
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
@@ -1567,6 +1566,11 @@ html {
 
   .sm\:text-\[13px\] {
     font-size: 13px;
+  }
+
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .sm\:text-2xl {
