--- a/css/output.css
+++ b/css/output.css
@@ -582,14 +582,14 @@ html {
   margin: 0px;
 }
 
-.mx-6 {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-}
-
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 
 .my-12 {
@@ -637,6 +637,22 @@ html {
   margin-right: 0.75rem;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .mt-36 {
   margin-top: 9rem;
 }
@@ -651,14 +667,6 @@ html {
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
 }
 
 .mt-24 {
@@ -689,10 +697,6 @@ html {
   margin-bottom: 70px;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
-}
-
 .mt-11 {
   margin-top: 2.75rem;
 }
@@ -707,10 +711,6 @@ html {
 
 .mb-20 {
   margin-bottom: 5rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
 }
 
 .box-border {
@@ -737,6 +737,14 @@ html {
   height: 1px;
 }
 
+.h-\[100\%\] {
+  height: 100%;
+}
+
+.h-\[40px\] {
+  height: 40px;
+}
+
 .w-\[280px\] {
   width: 280px;
 }
@@ -751,6 +759,14 @@ html {
 
 .w-\[30\%\] {
   width: 30%;
+}
+
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-\[40px\] {
+  width: 40px;
 }
 
 .max-w-full {
@@ -785,6 +801,22 @@ html {
   max-width: 600px;
 }
 
+.max-w-\[30\%\] {
+  max-width: 30%;
+}
+
+.max-w-\[31\%\] {
+  max-width: 31%;
+}
+
+.max-w-\[320px\] {
+  max-width: 320px;
+}
+
+.max-w-\[40px\] {
+  max-width: 40px;
+}
+
 .basis-\[33\%\] {
   flex-basis: 33%;
 }
@@ -797,12 +829,28 @@ html {
   flex-basis: 31%;
 }
 
+.basis-1\/3 {
+  flex-basis: 33.333333%;
+}
+
+.basis-\[30\%\] {
+  flex-basis: 30%;
+}
+
+.basis-\[29\%\] {
+  flex-basis: 29%;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -843,14 +891,14 @@ html {
   background-color: rgb(203 213 225 / var(--tw-bg-opacity));
 }
 
-.bg-bgfooter {
-  --tw-bg-opacity: 1;
-  background-color: rgb(21 21 21 / var(--tw-bg-opacity));
-}
-
 .bg-bgflex {
   --tw-bg-opacity: 1;
   background-color: rgb(30 29 29 / var(--tw-bg-opacity));
+}
+
+.bg-bgfooter {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 21 21 / var(--tw-bg-opacity));
 }
 
 .p-0 {
@@ -951,11 +999,6 @@ html {
   line-height: 1.75rem;
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
 .text-\[22px\] {
   font-size: 22px;
 }
@@ -963,6 +1006,11 @@ html {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-3xl {
@@ -995,12 +1043,16 @@ html {
   line-height: 1.75rem;
 }
 
-.leading-5 {
-  line-height: 1.25rem;
+.leading-6 {
+  line-height: 1.5rem;
 }
 
 .leading-8 {
   line-height: 2rem;
+}
+
+.leading-5 {
+  line-height: 1.25rem;
 }
 
 .leading-9 {
@@ -1013,10 +1065,6 @@ html {
 
 .leading-\[22px\] {
   line-height: 22px;
-}
-
-.leading-6 {
-  line-height: 1.5rem;
 }
 
 .text-white {
@@ -1137,6 +1185,10 @@ html {
     margin-top: 2.25rem;
   }
 
+  .md\:ml-\[30px\] {
+    margin-left: 30px;
+  }
+
   .md\:mt-2 {
     margin-top: 0.5rem;
   }
@@ -1159,10 +1211,6 @@ html {
 
   .md\:mt-12 {
     margin-top: 3rem;
-  }
-
-  .md\:ml-\[30px\] {
-    margin-left: 30px;
   }
 
   .md\:hidden {
@@ -1201,8 +1249,16 @@ html {
     max-width: 330px;
   }
 
+  .md\:max-w-\[300px\] {
+    max-width: 300px;
+  }
+
   .md\:basis-\[34\%\] {
     flex-basis: 34%;
+  }
+
+  .md\:basis-1\/2 {
+    flex-basis: 50%;
   }
 
   .md\:justify-center {
@@ -1214,14 +1270,14 @@ html {
     padding-right: 30px;
   }
 
-  .md\:px-7 {
-    padding-left: 1.75rem;
-    padding-right: 1.75rem;
-  }
-
   .md\:py-10 {
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
+  }
+
+  .md\:px-7 {
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
   }
 
   .md\:px-16 {
@@ -1232,6 +1288,11 @@ html {
   .md\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
+  }
+
+  .md\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
   .md\:pb-8 {
@@ -1304,6 +1365,11 @@ html {
     right: 0.05rem;
   }
 
+  .sm\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
   .sm\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
@@ -1314,9 +1380,9 @@ html {
     margin-right: auto;
   }
 
-  .sm\:my-0 {
-    margin-top: 0px;
-    margin-bottom: 0px;
+  .sm\:my-10 {
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
   }
 
   .sm\:ml-3 {
@@ -1351,32 +1417,40 @@ html {
     margin-top: 0.25rem;
   }
 
+  .sm\:mt-8 {
+    margin-top: 2rem;
+  }
+
+  .sm\:ml-0 {
+    margin-left: 0px;
+  }
+
+  .sm\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+
   .sm\:mr-0 {
     margin-right: 0px;
   }
 
-  .sm\:mb-6 {
-    margin-bottom: 1.5rem;
+  .sm\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .sm\:mt-2 {
+    margin-top: 0.5rem;
   }
 
   .sm\:mr-3 {
     margin-right: 0.75rem;
   }
 
-  .sm\:mb-7 {
-    margin-bottom: 1.75rem;
-  }
-
-  .sm\:mb-12 {
-    margin-bottom: 3rem;
+  .sm\:mb-8 {
+    margin-bottom: 2rem;
   }
 
   .sm\:mt-20 {
     margin-top: 5rem;
-  }
-
-  .sm\:mb-3 {
-    margin-bottom: 0.75rem;
   }
 
   .sm\:mt-12 {
@@ -1387,12 +1461,8 @@ html {
     margin-left: 1.25rem;
   }
 
-  .sm\:mt-2 {
-    margin-top: 0.5rem;
-  }
-
-  .sm\:mb-8 {
-    margin-bottom: 2rem;
+  .sm\:mb-6 {
+    margin-bottom: 1.5rem;
   }
 
   .sm\:mb-0 {
@@ -1407,20 +1477,8 @@ html {
     margin-right: 1rem;
   }
 
-  .sm\:mt-8 {
-    margin-top: 2rem;
-  }
-
-  .sm\:mb-4 {
-    margin-bottom: 1rem;
-  }
-
   .sm\:mb-\[1\.05rem\] {
     margin-bottom: 1.05rem;
-  }
-
-  .sm\:ml-0 {
-    margin-left: 0px;
   }
 
   .sm\:block {
@@ -1439,6 +1497,10 @@ html {
     height: 106px;
   }
 
+  .sm\:h-\[30px\] {
+    height: 30px;
+  }
+
   .sm\:w-\[170px\] {
     width: 170px;
   }
@@ -1447,24 +1509,32 @@ html {
     width: 7rem;
   }
 
-  .sm\:max-w-\[318px\] {
-    max-width: 318px;
+  .sm\:max-w-\[270px\] {
+    max-width: 270px;
   }
 
   .sm\:max-w-\[304px\] {
     max-width: 304px;
   }
 
+  .sm\:max-w-\[318px\] {
+    max-width: 318px;
+  }
+
   .sm\:max-w-\[218px\] {
     max-width: 218px;
   }
 
-  .sm\:max-w-\[270px\] {
-    max-width: 270px;
+  .sm\:max-w-\[30px\] {
+    max-width: 30px;
   }
 
   .sm\:basis-\[48\%\] {
     flex-basis: 48%;
+  }
+
+  .sm\:basis-\[90\%\] {
+    flex-basis: 90%;
   }
 
   .sm\:flex-col {
@@ -1549,6 +1619,15 @@ html {
     font-size: 28px;
   }
 
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:text-\[13px\] {
+    font-size: 13px;
+  }
+
   .sm\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -1562,15 +1641,6 @@ html {
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .sm\:text-\[13px\] {
-    font-size: 13px;
-  }
-
-  .sm\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
   }
 
   .sm\:text-2xl {
@@ -1590,12 +1660,12 @@ html {
     line-height: 1rem;
   }
 
-  .sm\:leading-\[14px\] {
-    line-height: 14px;
-  }
-
   .sm\:leading-6 {
     line-height: 1.5rem;
+  }
+
+  .sm\:leading-\[14px\] {
+    line-height: 14px;
   }
 
   .sm\:leading-\[0\.5rem\] {
