--- a/css/output.css
+++ b/css/output.css
@@ -570,6 +570,10 @@ html {
   max-width: 1195px;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
 }
@@ -585,6 +589,11 @@ html {
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+
+.my-\[90px\] {
+  margin-top: 90px;
+  margin-bottom: 90px;
 }
 
 .mx-6 {
@@ -713,6 +722,14 @@ html {
   margin-bottom: 5rem;
 }
 
+.ml-4 {
+  margin-left: 1rem;
+}
+
+.mt-\[70px\] {
+  margin-top: 70px;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -737,10 +754,6 @@ html {
   height: 1px;
 }
 
-.h-\[100\%\] {
-  height: 100%;
-}
-
 .h-\[40px\] {
   height: 40px;
 }
@@ -761,12 +774,8 @@ html {
   width: 30%;
 }
 
-.w-\[100\%\] {
-  width: 100%;
-}
-
-.w-\[40px\] {
-  width: 40px;
+.w-\[620px\] {
+  width: 620px;
 }
 
 .max-w-full {
@@ -785,6 +794,14 @@ html {
   max-width: 720px;
 }
 
+.max-w-\[320px\] {
+  max-width: 320px;
+}
+
+.max-w-\[40px\] {
+  max-width: 40px;
+}
+
 .max-w-\[670px\] {
   max-width: 670px;
 }
@@ -801,20 +818,12 @@ html {
   max-width: 600px;
 }
 
-.max-w-\[30\%\] {
-  max-width: 30%;
+.max-w-\[620px\] {
+  max-width: 620px;
 }
 
-.max-w-\[31\%\] {
-  max-width: 31%;
-}
-
-.max-w-\[320px\] {
-  max-width: 320px;
-}
-
-.max-w-\[40px\] {
-  max-width: 40px;
+.max-w-\[450px\] {
+  max-width: 450px;
 }
 
 .basis-\[33\%\] {
@@ -833,28 +842,24 @@ html {
   flex-basis: 33.333333%;
 }
 
-.basis-\[30\%\] {
-  flex-basis: 30%;
-}
-
-.basis-\[29\%\] {
-  flex-basis: 29%;
-}
-
 .cursor-pointer {
   cursor: pointer;
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .flex-wrap {
   flex-wrap: wrap;
 }
 
-.items-start {
-  align-items: flex-start;
-}
-
 .items-center {
   align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -920,6 +925,11 @@ html {
   padding-bottom: 3.5rem;
 }
 
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
 .px-14 {
   padding-left: 3.5rem;
   padding-right: 3.5rem;
@@ -953,6 +963,14 @@ html {
 
 .pt-28 {
   padding-top: 7rem;
+}
+
+.pr-\[260px\] {
+  padding-right: 260px;
+}
+
+.pr-20 {
+  padding-right: 5rem;
 }
 
 .pt-5 {
@@ -1140,6 +1158,11 @@ html {
     top: 2rem;
   }
 
+  .md\:my-12 {
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+  }
+
   .md\:mx-7 {
     margin-left: 1.75rem;
     margin-right: 1.75rem;
@@ -1213,6 +1236,14 @@ html {
     margin-top: 3rem;
   }
 
+  .md\:mt-\[219px\] {
+    margin-top: 219px;
+  }
+
+  .md\:mt-\[auto\] {
+    margin-top: auto;
+  }
+
   .md\:hidden {
     display: none;
   }
@@ -1245,20 +1276,24 @@ html {
     max-width: 563px;
   }
 
+  .md\:max-w-\[300px\] {
+    max-width: 300px;
+  }
+
   .md\:max-w-\[330px\] {
     max-width: 330px;
   }
 
-  .md\:max-w-\[300px\] {
-    max-width: 300px;
+  .md\:max-w-\[auto\] {
+    max-width: auto;
   }
 
   .md\:basis-\[34\%\] {
     flex-basis: 34%;
   }
 
-  .md\:basis-1\/2 {
-    flex-basis: 50%;
+  .md\:flex-col {
+    flex-direction: column;
   }
 
   .md\:justify-center {
@@ -1273,6 +1308,11 @@ html {
   .md\:py-10 {
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
+  }
+
+  .md\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
   .md\:px-7 {
@@ -1290,17 +1330,16 @@ html {
     padding-right: 3rem;
   }
 
-  .md\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
   .md\:pb-8 {
     padding-bottom: 2rem;
   }
 
   .md\:pt-28 {
     padding-top: 7rem;
+  }
+
+  .md\:pr-0 {
+    padding-right: 0px;
   }
 
   .md\:pt-\[72px\] {
@@ -1332,6 +1371,11 @@ html {
   .md\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
   .md\:text-2xl {
@@ -1370,6 +1414,11 @@ html {
     margin-bottom: 0px;
   }
 
+  .sm\:my-10 {
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+  }
+
   .sm\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
@@ -1378,11 +1427,6 @@ html {
   .sm\:mx-auto {
     margin-left: auto;
     margin-right: auto;
-  }
-
-  .sm\:my-10 {
-    margin-top: 2.5rem;
-    margin-bottom: 2.5rem;
   }
 
   .sm\:ml-3 {
@@ -1493,12 +1537,12 @@ html {
     display: none;
   }
 
-  .sm\:h-\[106px\] {
-    height: 106px;
-  }
-
   .sm\:h-\[30px\] {
     height: 30px;
+  }
+
+  .sm\:h-\[106px\] {
+    height: 106px;
   }
 
   .sm\:w-\[170px\] {
@@ -1517,6 +1561,10 @@ html {
     max-width: 304px;
   }
 
+  .sm\:max-w-\[30px\] {
+    max-width: 30px;
+  }
+
   .sm\:max-w-\[318px\] {
     max-width: 318px;
   }
@@ -1525,16 +1573,8 @@ html {
     max-width: 218px;
   }
 
-  .sm\:max-w-\[30px\] {
-    max-width: 30px;
-  }
-
   .sm\:basis-\[48\%\] {
     flex-basis: 48%;
-  }
-
-  .sm\:basis-\[90\%\] {
-    flex-basis: 90%;
   }
 
   .sm\:flex-col {
@@ -1628,6 +1668,11 @@ html {
     font-size: 13px;
   }
 
+  .sm\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
   .sm\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -1636,11 +1681,6 @@ html {
   .sm\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
-  }
-
-  .sm\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
   }
 
   .sm\:text-2xl {
