--- a/css/output.css
+++ b/css/output.css
@@ -570,10 +570,6 @@ html {
   max-width: 1195px;
 }
 
-.absolute {
-  position: absolute;
-}
-
 .relative {
   position: relative;
 }
@@ -594,6 +590,11 @@ html {
 .my-\[90px\] {
   margin-top: 90px;
   margin-bottom: 90px;
+}
+
+.my-7 {
+  margin-top: 1.75rem;
+  margin-bottom: 1.75rem;
 }
 
 .mx-6 {
@@ -662,6 +663,14 @@ html {
   margin-left: 0.5rem;
 }
 
+.mt-\[70px\] {
+  margin-top: 70px;
+}
+
+.ml-4 {
+  margin-left: 1rem;
+}
+
 .mt-36 {
   margin-top: 9rem;
 }
@@ -722,14 +731,6 @@ html {
   margin-bottom: 5rem;
 }
 
-.ml-4 {
-  margin-left: 1rem;
-}
-
-.mt-\[70px\] {
-  margin-top: 70px;
-}
-
 .box-border {
   box-sizing: border-box;
 }
@@ -774,10 +775,6 @@ html {
   width: 30%;
 }
 
-.w-\[620px\] {
-  width: 620px;
-}
-
 .max-w-full {
   max-width: 100%;
 }
@@ -802,6 +799,14 @@ html {
   max-width: 40px;
 }
 
+.max-w-\[620px\] {
+  max-width: 620px;
+}
+
+.max-w-\[450px\] {
+  max-width: 450px;
+}
+
 .max-w-\[670px\] {
   max-width: 670px;
 }
@@ -818,16 +823,12 @@ html {
   max-width: 600px;
 }
 
-.max-w-\[620px\] {
-  max-width: 620px;
-}
-
-.max-w-\[450px\] {
-  max-width: 450px;
-}
-
 .basis-\[33\%\] {
   flex-basis: 33%;
+}
+
+.basis-1\/3 {
+  flex-basis: 33.333333%;
 }
 
 .basis-\[32\%\] {
@@ -836,10 +837,6 @@ html {
 
 .basis-\[31\%\] {
   flex-basis: 31%;
-}
-
-.basis-1\/3 {
-  flex-basis: 33.333333%;
 }
 
 .cursor-pointer {
@@ -856,6 +853,10 @@ html {
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-end {
@@ -925,11 +926,6 @@ html {
   padding-bottom: 3.5rem;
 }
 
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
 .px-14 {
   padding-left: 3.5rem;
   padding-right: 3.5rem;
@@ -967,10 +963,6 @@ html {
 
 .pr-\[260px\] {
   padding-right: 260px;
-}
-
-.pr-20 {
-  padding-right: 5rem;
 }
 
 .pt-5 {
@@ -1158,6 +1150,11 @@ html {
     top: 2rem;
   }
 
+  .md\:mx-4 {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
   .md\:my-12 {
     margin-top: 3rem;
     margin-bottom: 3rem;
@@ -1212,6 +1209,14 @@ html {
     margin-left: 30px;
   }
 
+  .md\:mt-\[219px\] {
+    margin-top: 219px;
+  }
+
+  .md\:mt-\[auto\] {
+    margin-top: auto;
+  }
+
   .md\:mt-2 {
     margin-top: 0.5rem;
   }
@@ -1234,14 +1239,6 @@ html {
 
   .md\:mt-12 {
     margin-top: 3rem;
-  }
-
-  .md\:mt-\[219px\] {
-    margin-top: 219px;
-  }
-
-  .md\:mt-\[auto\] {
-    margin-top: auto;
   }
 
   .md\:hidden {
@@ -1280,12 +1277,12 @@ html {
     max-width: 300px;
   }
 
-  .md\:max-w-\[330px\] {
-    max-width: 330px;
-  }
-
   .md\:max-w-\[auto\] {
     max-width: auto;
+  }
+
+  .md\:max-w-\[330px\] {
+    max-width: 330px;
   }
 
   .md\:basis-\[34\%\] {
@@ -1401,6 +1398,12 @@ html {
 
   .md\:leading-4 {
     line-height: 1rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .ss\:hidden {
+    display: none;
   }
 }
 
