--- a/css/output.css
+++ b/css/output.css
@@ -578,10 +578,6 @@ html {
   right: 1rem;
 }
 
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
 .bottom-\[90px\] {
   bottom: 90px;
 }
@@ -684,6 +680,14 @@ html {
   margin-left: 1rem;
 }
 
+.mt-\[150px\] {
+  margin-top: 150px;
+}
+
+.mb-\[90px\] {
+  margin-bottom: 90px;
+}
+
 .-mt-8 {
   margin-top: -2rem;
 }
@@ -750,14 +754,6 @@ html {
 
 .mb-20 {
   margin-bottom: 5rem;
-}
-
-.mt-\[150px\] {
-  margin-top: 150px;
-}
-
-.mb-\[90px\] {
-  margin-bottom: 90px;
 }
 
 .box-border {
@@ -994,6 +990,11 @@ html {
   padding-right: 0.75rem;
 }
 
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
 .px-14 {
   padding-left: 3.5rem;
   padding-right: 3.5rem;
@@ -1007,11 +1008,6 @@ html {
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
-}
-
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
 }
 
 .pt-7 {
@@ -1046,8 +1042,12 @@ html {
   padding-right: 2rem;
 }
 
-.pb-3 {
-  padding-bottom: 0.75rem;
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
+.pb-\[18px\] {
+  padding-bottom: 18px;
 }
 
 .pt-4 {
@@ -1066,12 +1066,8 @@ html {
   padding-top: 1.25rem;
 }
 
-.pt-3 {
-  padding-top: 0.75rem;
-}
-
-.pb-\[18px\] {
-  padding-bottom: 18px;
+.pb-3 {
+  padding-bottom: 0.75rem;
 }
 
 .text-left {
@@ -1163,6 +1159,10 @@ html {
   line-height: 16px;
 }
 
+.leading-4 {
+  line-height: 1rem;
+}
+
 .leading-9 {
   line-height: 2.25rem;
 }
@@ -1173,10 +1173,6 @@ html {
 
 .leading-\[22px\] {
   line-height: 22px;
-}
-
-.leading-4 {
-  line-height: 1rem;
 }
 
 .text-white {
@@ -1328,6 +1324,10 @@ html {
     margin-top: auto;
   }
 
+  .md\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+
   .md\:mt-2 {
     margin-top: 0.5rem;
   }
@@ -1350,10 +1350,6 @@ html {
 
   .md\:mt-12 {
     margin-top: 3rem;
-  }
-
-  .md\:mb-3 {
-    margin-bottom: 0.75rem;
   }
 
   .md\:hidden {
@@ -1431,6 +1427,11 @@ html {
     padding-right: 1.5rem;
   }
 
+  .md\:px-\[21px\] {
+    padding-left: 21px;
+    padding-right: 21px;
+  }
+
   .md\:px-16 {
     padding-left: 4rem;
     padding-right: 4rem;
@@ -1446,11 +1447,6 @@ html {
     padding-right: 1.75rem;
   }
 
-  .md\:px-\[21px\] {
-    padding-left: 21px;
-    padding-right: 21px;
-  }
-
   .md\:pb-8 {
     padding-bottom: 2rem;
   }
@@ -1461,6 +1457,14 @@ html {
 
   .md\:pr-0 {
     padding-right: 0px;
+  }
+
+  .md\:pt-\[5px\] {
+    padding-top: 5px;
+  }
+
+  .md\:pb-2 {
+    padding-bottom: 0.5rem;
   }
 
   .md\:pt-\[72px\] {
@@ -1477,14 +1481,6 @@ html {
 
   .md\:pt-0 {
     padding-top: 0px;
-  }
-
-  .md\:pt-\[5px\] {
-    padding-top: 5px;
-  }
-
-  .md\:pb-2 {
-    padding-bottom: 0.5rem;
   }
 
   .md\:text-xl {
@@ -1524,6 +1520,10 @@ html {
     line-height: 31px;
   }
 
+  .md\:leading-\[1\.5rem\] {
+    line-height: 1.5rem;
+  }
+
   .md\:leading-6 {
     line-height: 1.5rem;
   }
@@ -1538,6 +1538,27 @@ html {
 }
 
 @media (max-width: 500px) {
+  .ss\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  .ss\:ml-4 {
+    margin-left: 1rem;
+  }
+
+  .ss\:ml-5 {
+    margin-left: 1.25rem;
+  }
+
+  .ss\:mt-\[50px\] {
+    margin-top: 50px;
+  }
+
+  .ss\:mb-\[20px\] {
+    margin-bottom: 20px;
+  }
+
   .ss\:mt-3 {
     margin-top: 0.75rem;
   }
@@ -1546,8 +1567,86 @@ html {
     margin-bottom: 14px;
   }
 
+  .ss\:mt-1 {
+    margin-top: 0.25rem;
+  }
+
+  .ss\:mb-7 {
+    margin-bottom: 1.75rem;
+  }
+
+  .ss\:mr-0 {
+    margin-right: 0px;
+  }
+
+  .ss\:mt-4 {
+    margin-top: 1rem;
+  }
+
+  .ss\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .ss\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
+  .ss\:mr-3 {
+    margin-right: 0.75rem;
+  }
+
+  .ss\:mb-3 {
+    margin-bottom: 0.75rem;
+  }
+
+  .ss\:ml-3 {
+    margin-left: 0.75rem;
+  }
+
+  .ss\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
+  .ss\:block {
+    display: block;
+  }
+
+  .ss\:flex {
+    display: flex;
+  }
+
   .ss\:hidden {
     display: none;
+  }
+
+  .ss\:h-\[106px\] {
+    height: 106px;
+  }
+
+  .ss\:w-28 {
+    width: 7rem;
+  }
+
+  .ss\:flex-col {
+    flex-direction: column;
+  }
+
+  .ss\:justify-center {
+    justify-content: center;
+  }
+
+  .ss\:border-t-2 {
+    border-top-width: 2px;
+  }
+
+  .ss\:border-lightgreen {
+    --tw-border-opacity: 1;
+    border-color: rgb(2 229 2 / var(--tw-border-opacity));
+  }
+
+  .ss\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .ss\:px-20 {
@@ -1555,13 +1654,31 @@ html {
     padding-right: 5rem;
   }
 
+  .ss\:pr-28 {
+    padding-right: 7rem;
+  }
+
   .ss\:pt-\[10px\] {
     padding-top: 10px;
+  }
+
+  .ss\:pt-24 {
+    padding-top: 6rem;
   }
 
   .ss\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .ss\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .ss\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .ss\:leading-\[27px\] {
@@ -1768,14 +1885,14 @@ html {
     padding-bottom: 3px;
   }
 
-  .sm\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
   .sm\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .sm\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .sm\:px-8 {
@@ -1838,6 +1955,10 @@ html {
     line-height: 1.25rem;
   }
 
+  .sm\:text-\[17px\] {
+    font-size: 17px;
+  }
+
   .sm\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -1851,10 +1972,6 @@ html {
   .sm\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
-  }
-
-  .sm\:text-\[17px\] {
-    font-size: 17px;
   }
 
   .sm\:text-\[26px\] {
@@ -1883,9 +2000,5 @@ html {
 
   .sm\:leading-\[27px\] {
     line-height: 27px;
-  }
-
-  .sm\:leading-\[1\.5rem\] {
-    line-height: 1.5rem;
   }
 }
