--- a/css/output.css
+++ b/css/output.css
@@ -1062,14 +1062,6 @@ html {
   padding-bottom: 1.75rem;
 }
 
-.pt-5 {
-  padding-top: 1.25rem;
-}
-
-.pb-3 {
-  padding-bottom: 0.75rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -1551,6 +1543,14 @@ html {
     margin-left: 1.25rem;
   }
 
+  .ss\:mt-1 {
+    margin-top: 0.25rem;
+  }
+
+  .ss\:mb-7 {
+    margin-bottom: 1.75rem;
+  }
+
   .ss\:mt-\[50px\] {
     margin-top: 50px;
   }
@@ -1565,14 +1565,6 @@ html {
 
   .ss\:mb-\[14px\] {
     margin-bottom: 14px;
-  }
-
-  .ss\:mt-1 {
-    margin-top: 0.25rem;
-  }
-
-  .ss\:mb-7 {
-    margin-bottom: 1.75rem;
   }
 
   .ss\:mr-0 {
@@ -1605,6 +1597,10 @@ html {
 
   .ss\:mb-8 {
     margin-bottom: 2rem;
+  }
+
+  .ss\:mr-8 {
+    margin-right: 2rem;
   }
 
   .ss\:block {
@@ -1654,6 +1650,10 @@ html {
     padding-right: 5rem;
   }
 
+  .ss\:pt-24 {
+    padding-top: 6rem;
+  }
+
   .ss\:pr-28 {
     padding-right: 7rem;
   }
@@ -1662,8 +1662,8 @@ html {
     padding-top: 10px;
   }
 
-  .ss\:pt-24 {
-    padding-top: 6rem;
+  .ss\:pt-\[340px\] {
+    padding-top: 340px;
   }
 
   .ss\:text-base {
@@ -1686,7 +1686,7 @@ html {
   }
 }
 
-@media (max-width: 360px) {
+@media (max-width: 420px) {
   .sm\:right-\[0\.05rem\] {
     right: 0.05rem;
   }
@@ -1739,10 +1739,6 @@ html {
     margin-top: 1.25rem;
   }
 
-  .sm\:mt-1 {
-    margin-top: 0.25rem;
-  }
-
   .sm\:mt-8 {
     margin-top: 2rem;
   }
@@ -1753,26 +1749,6 @@ html {
 
   .sm\:mb-3 {
     margin-bottom: 0.75rem;
-  }
-
-  .sm\:mr-0 {
-    margin-right: 0px;
-  }
-
-  .sm\:mb-4 {
-    margin-bottom: 1rem;
-  }
-
-  .sm\:mt-2 {
-    margin-top: 0.5rem;
-  }
-
-  .sm\:mr-3 {
-    margin-right: 0.75rem;
-  }
-
-  .sm\:mb-8 {
-    margin-bottom: 2rem;
   }
 
   .sm\:mt-20 {
@@ -1787,8 +1763,16 @@ html {
     margin-left: 1.25rem;
   }
 
+  .sm\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
   .sm\:mb-6 {
     margin-bottom: 1.5rem;
+  }
+
+  .sm\:mb-8 {
+    margin-bottom: 2rem;
   }
 
   .sm\:mb-0 {
@@ -1803,28 +1787,20 @@ html {
     margin-right: 1rem;
   }
 
+  .sm\:mr-0 {
+    margin-right: 0px;
+  }
+
+  .sm\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
   .sm\:mb-\[1\.05rem\] {
     margin-bottom: 1.05rem;
   }
 
-  .sm\:block {
-    display: block;
-  }
-
-  .sm\:flex {
-    display: flex;
-  }
-
-  .sm\:hidden {
-    display: none;
-  }
-
   .sm\:h-\[30px\] {
     height: 30px;
-  }
-
-  .sm\:h-\[106px\] {
-    height: 106px;
   }
 
   .sm\:w-\[170px\] {
@@ -1859,25 +1835,8 @@ html {
     flex-basis: 48%;
   }
 
-  .sm\:flex-col {
-    flex-direction: column;
-  }
-
-  .sm\:justify-center {
-    justify-content: center;
-  }
-
   .sm\:justify-around {
     justify-content: space-around;
-  }
-
-  .sm\:border-t-2 {
-    border-top-width: 2px;
-  }
-
-  .sm\:border-lightgreen {
-    --tw-border-opacity: 1;
-    border-color: rgb(2 229 2 / var(--tw-border-opacity));
   }
 
   .sm\:py-\[3px\] {
@@ -1962,11 +1921,6 @@ html {
   .sm\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
-  }
-
-  .sm\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
   }
 
   .sm\:text-2xl {
